test/TestPhases/typechecker/valid/boollean.blc
module

activity empty ()()
    var x: bool = false

    x = x or true
    await false;
end
