test/TestPhases/typechecker/invalid/structNonStructAccess.blc
module

activity main ()()
  var s: int8 = 7
  s.q = 6
  await true
end
